--- a/www/css/index.css
+++ b/www/css/index.css
@@ -82,16 +82,38 @@ body {
 
 /* MINE */
 
-#topbar {
+#header {
 	position: fixed;
-	top: 0;
+	top: -50px;
 	left: 0;
 	width: 100%;
-	height: 50px;
+	height: 500px;
 	background: #343030;
 	z-index: 1;
 	box-shadow: 0px 0px 4px #000, inset 0 -40px 100px 15px #000;
 	padding: 5px;
+	-webkit-transform: translate3d(0,0,0);
+        -moz-transform: translate3d(0,0,0);
+        -ms-transform: translate3d(0,0,0);
+        -o-transform: translate3d(0,0,0);
+        transform: translate3d(0,0,0);
+        -webkit-transition: transform 400ms ease;
+        -moz-transition: transform 400ms ease;
+        -o-transition: transform 400ms ease;
+        transition: transform 400ms ease;
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
+        -o-backface-visibility: hidden;
+        backface-visibility: hidden;
+}
+
+#header:active {
+	-webkit-transform: translate3d(0, 50px,0);
+        -moz-transform: translate3d(0, 83%,0);
+        -ms-transform: translate3d(0, 83%,0);
+        -o-transform: translate3d(0, 83%,0);
+        transform: translate3d(0, 50px,0);
 }
 
 #search {
