--- a/www/css/index.css
+++ b/www/css/index.css
@@ -93,26 +93,15 @@ body {
 	box-shadow: 0px 0px 4px #000, inset 0 -40px 100px 15px #000;
 	padding: 5px;
 	-webkit-transform: translate3d(0,0,0);
-        -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-        -o-transform: translate3d(0,0,0);
         transform: translate3d(0,0,0);
-        -webkit-transition: transform 400ms ease;
-        -moz-transition: transform 400ms ease;
-        -o-transition: transform 400ms ease;
-        transition: transform 400ms ease;
+        -webkit-transition: transform 1s ease;
+        transition: transform 1s ease;
         -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-        -o-backface-visibility: hidden;
         backface-visibility: hidden;
 }
 
 #header:active {
 	-webkit-transform: translate3d(0, 50px,0);
-        -moz-transform: translate3d(0, 83%,0);
-        -ms-transform: translate3d(0, 83%,0);
-        -o-transform: translate3d(0, 83%,0);
         transform: translate3d(0, 50px,0);
 }
 
